fixing notificartion on mobile

--- a/src/pages/Notifications/Notifications.less
+++ b/src/pages/Notifications/Notifications.less
@@ -155,8 +155,8 @@
 
 @media (max-width: 800px) {
   .notifications__container {
-    margin: 15px 15px;
-    width: calc(100% - 30px);
+    padding: 15px 15px;
+    width: calc(100%);
 
     .notification__subContainer {
       .notifications__notification {
